--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.38.0",
+        "dotenv-cli": "^11.0.0",
         "eslint": "^9.38.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-import": "^2.32.0",
