--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "@google-cloud/documentai": "^9.5.0",
         "@huggingface/inference": "^4.13.0",
         "dotenv": "^17.2.3",
-        "file-type": "^21.0.0"
+        "file-type": "^21.0.0",
+        "undici": "^7.16.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.38.0",
