--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     },
     "dependencies": {
         "@google-cloud/documentai": "^9.5.0",
+        "@google/genai": "^1.28.0",
+        "@google/generative-ai": "^0.24.1",
         "@huggingface/inference": "^4.13.0",
         "dotenv": "^17.2.3",
         "file-type": "^21.0.0",
